# ACEBench

./: .gitignore  BUILD  check_lint.sh  check_scores.py  eval_main.py  generate.py  pants.toml  pyproject.toml  pyrightconfig.json  requirements-base.txt  requirements-vllm.txt  requirements.txt  run_eval.sh
docs/: script.js
environment/: constants.py  files.py  trace_server.py  trace_server_test.py
environment/evaluation/: eval.py
environment/inference/: execution.py  inference.py
model_eval/: evaluation_helper.py  export.py  utils.py
model_inference/: apimodel_inference.py  base_inference.py  gemini.py  inference_map.py  llm_infer.py  model_infer.py
model_inference/multi_step/: APIModel_agent.py  multi_step_utils.py
model_inference/multi_turn/: APIModel_agent.py  APIModel_user.py
